--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore Gradle build output directory
 build
+out
 # Ignore Gradle project-specific cache directory
 .gradle
+# Ignore idea project-specific cache directory
 .idea
-out
+
